--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         {
             name: { ja: "ボゴ&チップス吉", en: "Bogo＆Chips Luck", ko: "Bogo＆Chips 길(吉)", zh: "Bogo＆Chips 吉" },
             desc: { 
-                ja: "のんびりする時間と<br>素早く動く時間を意識するとyummyなことが起こるかも！",
+                ja: "のんびりする時間と<br>素早く動く時間を意識すると<br>yummyなことが起こるかも！",
                 en: "Balance relaxing and fast-moving time<br>for a yummy day!",
                 ko: "느긋한 시간과 빠르게 움직이는 시간을<br>의식하면 맛있는 일이 생길지도!",
                 zh: "意識到悠閒時光與快速行動時間的平衡，<br>好事就會發生！"
@@ -384,7 +384,7 @@
         {
             name: { ja: "スーパードゥーパーyumyum吉！", en: "Super Duper yumyum Luck!", ko: "슈퍼 두퍼 yumyum 길(吉)!", zh: "超級無敵 yumyum 吉！" },
             desc: { 
-                ja: "何もかも完璧！黄金のケチャとオムが<br>ハチャメチャな幸運を運んきてくれるかも！",
+                ja: "何もかも完璧！黄金のケチャとオムが<br>ハチャメチャな幸運を運んできてくれるかも！",
                 en: "Everything is perfect!<br>Golden Kecha and Omu will bring crazy luck!",
                 ko: "모든 것이 완벽해!<br>황금 케차와 오무가 엄청난 행운을 가져다줄지도!",
                 zh: "萬事完美！<br>黃金茄汁與歐姆會為你帶來超級幸運！"
